main/rollouts/canary-with-analysis/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-demo
spec:
  replicas: 5
  strategy:
    canary:
      analysis: 
        templates:
          - templateName: smoke-test
        startingStep: 2 # delay starting analysis run until setWeight: 20%
        args:
          - name: service-name
            value: rollouts-demo-canary
          - name: color
            value: red
          - name: return500
            value: "10"
          # - name: canary-pod-hash
          #   valueFrom:
          #     podTemplateHashValue: Latest
      canaryService: rollouts-demo-canary
      stableService: rollouts-demo-stable
      trafficRouting:
        istio:
          virtualServices:
          - name: canary-demo-vsvc # At least one virtualService is required
            routes:
            - canary # At least one route is required
      steps:
      - setWeight: 25
      - pause: {duration: 120}
      - setWeight: 50
      - pause: {duration: 120}
      - setWeight: 75
      - pause: {duration: 120}
      - analysis: 
          templates:
            - templateName: smoke-test
          args:
            - name: service-name
              value: rollouts-demo-canary
            - name: color
              value: red
            - name: return500
              value: "90"
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: canary-demo
  template:
    metadata:
      labels:
        app: canary-demo
        istio-injection: enabled
    spec:
      containers:
      - name: canary-demo
        image: argoproj/rollouts-demo:red
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
